Ajout section Experiences: XLS Optronic, XtremPro, Nuit de l'Info

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="#presentation" class="text-light-200 hover:text-light transition-colors">Présentation</a>
                     <a href="#parcours" class="text-light-200 hover:text-light transition-colors">Parcours</a>
+                    <a href="#experiences" class="text-light-200 hover:text-light transition-colors">Expériences</a>
                     <a href="#competences" class="text-light-200 hover:text-light transition-colors">Compétences</a>
                     <a href="#projets" class="text-light-200 hover:text-light transition-colors">Projets</a>
                     <a href="#contact" class="btn-primary px-5 py-2 rounded-md font-semibold">Contact</a>
@@ -182,6 +183,8 @@
                 <a href="#presentation"
                     class="block text-light-200 hover:text-light transition-colors py-2">Présentation</a>
                 <a href="#parcours" class="block text-light-200 hover:text-light transition-colors py-2">Parcours</a>
+                <a href="#experiences"
+                    class="block text-light-200 hover:text-light transition-colors py-2">Expériences</a>
                 <a href="#competences"
                     class="block text-light-200 hover:text-light transition-colors py-2">Compétences</a>
                 <a href="#projets" class="block text-light-200 hover:text-light transition-colors py-2">Projets</a>
@@ -360,6 +363,86 @@
                         <span class="text-gold font-bold text-sm">2021</span>
                         <h3 class="text-xl font-bold text-light mt-1">Brevet des Collèges</h3>
                         <p class="text-light-300 text-sm mt-2">Collège Jean Monnet - La Loupe</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Expériences Section -->
+    <section id="experiences" class="py-24">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="text-center mb-16 fade-in">
+                <h2 class="text-3xl sm:text-4xl font-bold mb-4 text-light">Mes <span
+                        class="text-gold">Expériences</span></h2>
+                <p class="text-light-300 max-w-2xl mx-auto">
+                    Stages, événements et projets professionnels
+                </p>
+            </div>
+
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-5xl mx-auto">
+                <!-- XLS Optronic -->
+                <div
+                    class="fade-in bg-dark-100 rounded-xl p-6 border border-dark-200 hover:border-cyan-500/50 transition-all">
+                    <div class="flex items-center gap-4 mb-4">
+                        <div class="w-12 h-12 bg-cyan-500/20 rounded-xl flex items-center justify-center">
+                            <i data-lucide="building-2" class="w-6 h-6 text-cyan-400"></i>
+                        </div>
+                        <div>
+                            <span class="text-cyan-400 text-xs font-bold">BAC+2 — 2026</span>
+                            <h3 class="text-lg font-bold text-light">XO XLS Optronic</h3>
+                        </div>
+                    </div>
+                    <p class="text-light-200 text-sm mb-1">Stage • Dreux</p>
+                    <p class="text-light-300 text-sm mb-4">Administration système, téléphonie 3CX et maintenance du parc
+                        informatique.</p>
+                    <div class="flex flex-wrap gap-2">
+                        <span class="badge text-xs px-2 py-1 rounded">Windows Server</span>
+                        <span class="badge text-xs px-2 py-1 rounded">3CX</span>
+                        <span class="badge text-xs px-2 py-1 rounded">VOIP</span>
+                    </div>
+                </div>
+
+                <!-- XtremPro -->
+                <div
+                    class="fade-in bg-dark-100 rounded-xl p-6 border border-dark-200 hover:border-blue-500/50 transition-all">
+                    <div class="flex items-center gap-4 mb-4">
+                        <div class="w-12 h-12 bg-blue-500/20 rounded-xl flex items-center justify-center">
+                            <i data-lucide="wrench" class="w-6 h-6 text-blue-400"></i>
+                        </div>
+                        <div>
+                            <span class="text-blue-400 text-xs font-bold">BAC+1 — 2025</span>
+                            <h3 class="text-lg font-bold text-light">XtremPro</h3>
+                        </div>
+                    </div>
+                    <p class="text-light-200 text-sm mb-1">Stage • Boutique informatique</p>
+                    <p class="text-light-300 text-sm mb-4">Réparation matérielle, diagnostic de pannes et relation
+                        client.</p>
+                    <div class="flex flex-wrap gap-2">
+                        <span class="badge text-xs px-2 py-1 rounded">Hardware</span>
+                        <span class="badge text-xs px-2 py-1 rounded">Réparation</span>
+                        <span class="badge text-xs px-2 py-1 rounded">Diagnostic</span>
+                    </div>
+                </div>
+
+                <!-- Nuit de l'Info -->
+                <div
+                    class="fade-in bg-dark-100 rounded-xl p-6 border border-dark-200 hover:border-gold/50 transition-all">
+                    <div class="flex items-center gap-4 mb-4">
+                        <div class="w-12 h-12 bg-gold/20 rounded-xl flex items-center justify-center">
+                            <i data-lucide="moon" class="w-6 h-6 text-gold"></i>
+                        </div>
+                        <div>
+                            <span class="text-gold text-xs font-bold">Événement — 2024</span>
+                            <h3 class="text-lg font-bold text-light">Nuit de l'Info</h3>
+                        </div>
+                    </div>
+                    <p class="text-light-200 text-sm mb-1">Hackathon national</p>
+                    <p class="text-light-300 text-sm mb-4">Développement en équipe d'une solution web en une nuit.
+                        Travail collaboratif sous pression.</p>
+                    <div class="flex flex-wrap gap-2">
+                        <span class="badge text-xs px-2 py-1 rounded">Travail d'équipe</span>
+                        <span class="badge text-xs px-2 py-1 rounded">Développement</span>
                     </div>
                 </div>
             </div>
