Correction dates: Alternance 2026-2027, XtremPro 2025

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     <!-- Status badge -->
                     <div class="inline-flex items-center gap-2 border border-dark-200 rounded-full px-4 py-2 mb-6">
                         <span class="w-2 h-2 bg-green-500 rounded-full"></span>
-                        <span class="text-sm text-light-200">En recherche d'alternance — Rentrée 2025</span>
+                        <span class="text-sm text-light-200">En recherche d'alternance — Rentrée 2026-2027</span>
                     </div>
 
                     <!-- Title -->
@@ -510,7 +510,7 @@
                             <i data-lucide="wrench" class="w-6 h-6 text-blue-400"></i>
                         </div>
                         <div>
-                            <span class="text-blue-400 text-xs font-bold">BAC+1 — 2026</span>
+                            <span class="text-blue-400 text-xs font-bold">BAC+1 — 2025</span>
                             <h3 class="text-lg font-bold text-light">XtremPro</h3>
                         </div>
                     </div>
