Update Nuit de l'Info description and date verification

--- a/index.html
+++ b/index.html
@@ -537,8 +537,8 @@
                         </div>
                     </div>
                     <p class="text-light-200 text-sm mb-1">Hackathon national</p>
-                    <p class="text-light-300 text-sm mb-4">Développement en équipe d'une solution web en une nuit.
-                        Travail collaboratif sous pression.</p>
+                    <p class="text-light-300 text-sm mb-4">Développement intensif d'une application web en équipe.
+                        Challenge technique et créatif sur une nuit.</p>
                     <div class="flex flex-wrap gap-2">
                         <span class="badge text-xs px-2 py-1 rounded">Travail d'équipe</span>
                         <span class="badge text-xs px-2 py-1 rounded">Développement</span>
