Fix alignement contact info icons + update date status

--- a/index.html
+++ b/index.html
@@ -757,10 +757,14 @@
                 </div>
 
                 <!-- Info -->
+                <!-- Info -->
                 <div class="space-y-6 fade-in">
+                    <!-- Email -->
                     <a href="mailto:cyriaklaunay@gmail.com"
                         class="flex items-center gap-4 p-4 bg-dark-100 rounded-lg border border-dark-200 hover:border-dark-300 transition-colors">
-                        <i data-lucide="mail" class="w-5 h-5 text-light-200"></i>
+                        <div class="w-10 h-10 flex items-center justify-center bg-dark-200 rounded-full">
+                            <i data-lucide="mail" class="w-5 h-5 text-light-200"></i>
+                        </div>
                         <div>
                             <div class="text-sm font-medium text-light">Email</div>
                             <div class="text-sm text-light-300">cyriaklaunay@gmail.com</div>
@@ -770,7 +774,9 @@
                     <!-- CV Download -->
                     <div class="p-4 bg-dark-100 rounded-lg border border-dark-200">
                         <div class="flex items-center gap-4">
-                            <i data-lucide="file-down" class="w-5 h-5 text-light-200"></i>
+                            <div class="w-10 h-10 flex items-center justify-center bg-dark-200 rounded-full">
+                                <i data-lucide="file-down" class="w-5 h-5 text-light-200"></i>
+                            </div>
                             <div class="flex-1">
                                 <div class="text-sm font-medium text-light mb-1">Télécharger mon CV</div>
                                 <a href="CV.pdf" download
@@ -783,9 +789,12 @@
 
                     <!-- Availability -->
                     <div class="p-4 bg-dark-100 rounded-lg border border-dark-200">
-                        <div class="flex items-center gap-3">
-                            <span class="w-2 h-2 bg-green-500 rounded-full"></span>
-                            <span class="text-sm text-light">Disponible pour une alternance — Rentrée 2025</span>
+                        <div class="flex items-center gap-4">
+                            <div class="w-10 h-10 flex items-center justify-center bg-dark-200 rounded-full">
+                                <div class="w-2 h-2 bg-green-500 rounded-full shadow-[0_0_8px_rgba(34,197,94,0.5)]">
+                                </div>
+                            </div>
+                            <span class="text-sm text-light">Disponible pour une alternance — Rentrée 2026</span>
                         </div>
                     </div>
                 </div>
@@ -805,7 +814,7 @@
                         class="text-light-300 hover:text-light transition-colors">
                         <i data-lucide="linkedin" class="w-5 h-5"></i>
                     </a>
-                    <a href="https://github.com/CLePtiot" target="_blank"
+                    <a href="https://github.com/CLePtiot/PortFolio" target="_blank"
                         class="text-light-300 hover:text-light transition-colors">
                         <i data-lucide="github" class="w-5 h-5"></i>
                     </a>
