Update footer version to v1.1 for cache verification

--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex flex-col md:flex-row items-center justify-between gap-4">
                 <div class="text-light-300 text-sm">
-                    © 2025 Cyriak Launay — Portfolio BTS SIO SISR
+                    © 2025 Cyriak Launay — Portfolio BTS SIO SISR v1.1
                 </div>
                 <div class="flex items-center gap-6">
                     <a href="https://linkedin.com/in/cyriak-launay" target="_blank"
