--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center fade-in">
             <h2 class="text-3xl sm:text-4xl font-bold mb-8 text-light">À propos de <span class="text-gold">Moi</span>
             </h2>
-            <div class="space-y-6 text-lg text-light-300 leading-relaxed">
+            <div class="space-y-6 text-lg text-light-100 leading-relaxed font-medium">
                 <p>
                     Passionné par l'informatique depuis toujours, j'ai choisi de m'orienter vers l'administration
                     système et réseaux pour comprendre et maîtriser les infrastructures qui font tourner le monde
@@ -400,7 +400,7 @@
             <div class="text-center mb-16 fade-in">
                 <h2 class="text-3xl sm:text-4xl font-bold mb-4 text-light">Mon <span class="text-gold">Parcours</span>
                 </h2>
-                <p class="text-light-300 max-w-2xl mx-auto">
+                <p class="text-light-200 max-w-2xl mx-auto">
                     Une progression constante vers l'expertise en infrastructures et réseaux
                 </p>
             </div>
@@ -418,7 +418,7 @@
                         <span class="text-blue-400 font-bold text-sm">2024 - 2026</span>
                         <h3 class="text-xl font-bold text-light mt-1">BTS SIO - Option SISR</h3>
                         <p class="text-cyan-400 text-sm mt-1">Lycée Fulbert - Chartres</p>
-                        <p class="text-light-300 text-sm mt-2">Solutions d'Infrastructure, Systèmes et Réseaux</p>
+                        <p class="text-light-200 text-sm mt-2">Solutions d'Infrastructure, Systèmes et Réseaux</p>
                         <div class="mt-3 flex flex-wrap gap-2 justify-end">
                             <span class="badge text-xs px-2 py-1 rounded">Windows Server</span>
                             <span class="badge text-xs px-2 py-1 rounded">Linux</span>
@@ -444,7 +444,7 @@
                     <div class="w-1/2 pl-8">
                         <span class="text-cyan-400 font-bold text-sm">2026</span>
                         <h3 class="text-xl font-bold text-light mt-1">Stage - XO XLS Optronic</h3>
-                        <p class="text-light-300 text-sm mt-2">Administration système et téléphonie. Gestion serveurs et
+                        <p class="text-light-200 text-sm mt-2">Administration système et téléphonie. Gestion serveurs et
                             maintenance du parc informatique.</p>
                         <div class="mt-3 flex flex-wrap gap-2">
                             <span class="badge text-xs px-2 py-1 rounded">VOIP</span>
@@ -461,7 +461,7 @@
                         <span class="text-teal-400 font-bold text-sm">2021 - 2024</span>
                         <h3 class="text-xl font-bold text-light mt-1">BAC Pro Systèmes Numériques</h3>
                         <p class="text-teal-400 text-sm mt-1">Lycée des Métiers Sully - Nogent-le-Rotrou</p>
-                        <p class="text-light-300 text-sm mt-2">3 années de formation technique</p>
+                        <p class="text-light-200 text-sm mt-2">3 années de formation technique</p>
                         <div class="mt-3 flex flex-wrap gap-2 justify-end">
                             <span class="badge text-xs px-2 py-1 rounded">Électronique</span>
                             <span class="badge text-xs px-2 py-1 rounded">Réseaux</span>
@@ -486,7 +486,7 @@
                     <div class="w-1/2 pl-8">
                         <span class="text-gold font-bold text-sm">2021</span>
                         <h3 class="text-xl font-bold text-light mt-1">Brevet des Collèges</h3>
-                        <p class="text-light-300 text-sm mt-2">Collège Jean Monnet - La Loupe</p>
+                        <p class="text-light-200 text-sm mt-2">Collège Jean Monnet - La Loupe</p>
                     </div>
                 </div>
             </div>
@@ -499,7 +499,7 @@
             <div class="text-center mb-16 fade-in">
                 <h2 class="text-3xl sm:text-4xl font-bold mb-4 text-light">Mes <span
                         class="text-gold">Expériences</span></h2>
-                <p class="text-light-300 max-w-2xl mx-auto">
+                <p class="text-light-200 max-w-2xl mx-auto">
                     Stages, événements et projets professionnels
                 </p>
             </div>
@@ -518,7 +518,7 @@
                         </div>
                     </div>
                     <p class="text-light-200 text-sm mb-1">Stage • Dreux</p>
-                    <p class="text-light-300 text-sm mb-4">Administration système, téléphonie 3CX et maintenance du parc
+                    <p class="text-light-200 text-sm mb-4">Administration système, téléphonie 3CX et maintenance du parc
                         informatique.</p>
                     <div class="flex flex-wrap gap-2 justify-center">
                         <span class="badge text-xs px-2 py-1 rounded">Windows Server</span>
@@ -540,7 +540,7 @@
                         </div>
                     </div>
                     <p class="text-light-200 text-sm mb-1">Stage • Boutique informatique</p>
-                    <p class="text-light-300 text-sm mb-4">Réparation matérielle, diagnostic de pannes et relation
+                    <p class="text-light-200 text-sm mb-4">Réparation matérielle, diagnostic de pannes et relation
                         client.</p>
                     <div class="flex flex-wrap gap-2 justify-center">
                         <span class="badge text-xs px-2 py-1 rounded">Hardware</span>
@@ -562,7 +562,7 @@
                         </div>
                     </div>
                     <p class="text-light-200 text-sm mb-1">Hackathon national</p>
-                    <p class="text-light-300 text-sm mb-4">Développement intensif d'une application web en équipe.
+                    <p class="text-light-200 text-sm mb-4">Développement intensif d'une application web en équipe.
                         Challenge technique et créatif sur une nuit.</p>
                     <div class="flex flex-wrap gap-2 justify-center">
                         <span class="badge text-xs px-2 py-1 rounded">Travail d'équipe</span>
@@ -579,7 +579,7 @@
             <div class="text-center mb-16 fade-in">
                 <h2 class="text-3xl sm:text-4xl font-bold mb-4 text-light">Mes <span
                         class="text-gold">Compétences</span></h2>
-                <p class="text-light-300 max-w-2xl mx-auto">
+                <p class="text-light-200 max-w-2xl mx-auto">
                     Un ensemble de compétences techniques acquises en formation et en stage
                 </p>
             </div>
@@ -681,7 +681,7 @@
                     </div>
                     <div class="p-6 text-center">
                         <h3 class="text-lg font-bold text-light mb-2">Sport Ludique Orléans</h3>
-                        <p class="text-light-300 text-sm mb-4">Conception et mise en place d'une infrastructure réseau
+                        <p class="text-light-200 text-sm mb-4">Conception et mise en place d'une infrastructure réseau
                             complète, segmentée et sécurisée.</p>
                         <div class="flex flex-wrap gap-2 mb-5 justify-center">
                             <span class="badge text-xs px-2 py-1 rounded">VLAN</span>
@@ -706,7 +706,7 @@
                     </div>
                     <div class="p-6 text-center">
                         <h3 class="text-lg font-bold text-light mb-2">Site Web : FC Fulbert</h3>
-                        <p class="text-light-300 text-sm mb-4">Conception et développement d'un site web pour le club de
+                        <p class="text-light-200 text-sm mb-4">Conception et développement d'un site web pour le club de
                             football, optimisé pour le SEO.</p>
                         <div class="flex flex-wrap gap-2 mb-5 justify-center">
                             <span class="badge text-xs px-2 py-1 rounded">HTML/CSS</span>
@@ -729,7 +729,7 @@
                     </div>
                     <div class="p-6 text-center">
                         <h3 class="text-lg font-bold text-light mb-2">Jeu en ligne : Cluedo</h3>
-                        <p class="text-light-300 text-sm mb-4">Développement d'un jeu de Cluedo en ligne avec mécaniques
+                        <p class="text-light-200 text-sm mb-4">Développement d'un jeu de Cluedo en ligne avec mécaniques
                             de jeu dynamiques.</p>
                         <div class="flex flex-wrap gap-2 mb-5 justify-center">
                             <span class="badge text-xs px-2 py-1 rounded">JavaScript</span>
@@ -836,7 +836,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex flex-col md:flex-row items-center justify-between gap-4">
                 <div class="text-light-300 text-sm">
-                    © 2025 Cyriak Launay — Portfolio BTS SIO SISR v1.1
+                    © 2025 Cyriak Launay — Portfolio BTS SIO SISR v1.2
                 </div>
                 <div class="flex items-center gap-6">
                     <a href="https://linkedin.com/in/cyriak-launay" target="_blank"
