--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@
                             <i data-lucide="user" class="w-20 h-20 text-dark-300"></i>
                         </div>
                         <!-- L'utilisateur pourra mettre sa photo ici -->
-                        <img src="photo.jpg" alt="Cyriak Launay" class="w-full h-full object-cover relative z-10"
-                            onerror="this.style.display='none'">
+                        <img src="images/profile.png" alt="Cyriak Launay"
+                            class="w-full h-full object-cover relative z-10" onerror="this.style.display='none'">
                     </div>
                 </div>
 
@@ -433,14 +433,17 @@
                     <!-- Icon -->
                     <div
                         class="absolute left-1/2 transform -translate-x-1/2 w-10 h-10 bg-cyan-500 rounded-full flex items-center justify-center z-10 shadow-lg shadow-cyan-500/30">
-                        <i data-lucide="building" class="w-5 h-5 text-white"></i>
+                        <i data-lucide="building-2" class="w-5 h-5 text-white"></i>
                     </div>
                     <div class="w-1/2 pl-8">
                         <span class="text-cyan-400 font-bold text-sm">2026</span>
                         <h3 class="text-xl font-bold text-light mt-1">Stage - XO XLS Optronic</h3>
-                        <p class="text-light text-sm mt-2">Administration système et téléphonie. Gestion serveurs et
+                        <p class="text-light text-sm mt-1 mb-1 font-bold">DEV — Le Coudray</p>
+                        <p class="text-light text-sm mt-2">Développement, administration système et téléphonie. Gestion
+                            serveurs et
                             maintenance du parc informatique.</p>
                         <div class="mt-3 flex flex-wrap gap-2">
+                            <span class="badge text-xs px-2 py-1 rounded">DEV</span>
                             <span class="badge text-xs px-2 py-1 rounded">VOIP</span>
                             <span class="badge text-xs px-2 py-1 rounded">3CX</span>
                             <span class="badge text-xs px-2 py-1 rounded">Maintenance</span>
@@ -504,17 +507,19 @@
                     class="fade-in bg-dark-100 rounded-xl p-6 border border-dark-200 hover:border-cyan-500/50 transition-all text-center">
                     <div class="flex flex-col items-center gap-4 mb-4">
                         <div class="w-12 h-12 bg-cyan-500/20 rounded-xl flex items-center justify-center">
-                            <i data-lucide="building-2" class="w-6 h-6 text-cyan-400"></i>
+                            <i data-lucide="server-cog" class="w-6 h-6 text-cyan-400"></i>
                         </div>
                         <div>
                             <span class="text-cyan-400 text-xs font-bold">BAC+2 — 2026</span>
                             <h3 class="text-lg font-bold text-light">XO XLS Optronic</h3>
+                            <span class="text-cyan-400 text-sm font-bold block mt-1">DEV</span>
                         </div>
                     </div>
-                    <p class="text-light text-sm mb-1">Stage • Dreux</p>
-                    <p class="text-light text-sm mb-4">Administration système, téléphonie 3CX et maintenance du parc
-                        informatique.</p>
+                    <p class="text-light text-sm mb-1">Stage • Le Coudray</p>
+                    <p class="text-light text-sm mb-4">Développement, administration système, téléphonie 3CX et
+                        maintenance du parc informatique.</p>
                     <div class="flex flex-wrap gap-2 justify-center">
+                        <span class="badge text-xs px-2 py-1 rounded">DEV</span>
                         <span class="badge text-xs px-2 py-1 rounded">Windows Server</span>
                         <span class="badge text-xs px-2 py-1 rounded">3CX</span>
                         <span class="badge text-xs px-2 py-1 rounded">VOIP</span>
@@ -526,7 +531,7 @@
                     class="fade-in bg-dark-100 rounded-xl p-6 border border-dark-200 hover:border-blue-500/50 transition-all text-center">
                     <div class="flex flex-col items-center gap-4 mb-4">
                         <div class="w-12 h-12 bg-blue-500/20 rounded-xl flex items-center justify-center">
-                            <i data-lucide="wrench" class="w-6 h-6 text-blue-400"></i>
+                            <i data-lucide="monitor-check" class="w-6 h-6 text-blue-400"></i>
                         </div>
                         <div>
                             <span class="text-blue-400 text-xs font-bold">BAC+1 — 2025</span>
@@ -548,7 +553,7 @@
                     class="fade-in bg-dark-100 rounded-xl p-6 border border-dark-200 hover:border-gold/50 transition-all text-center">
                     <div class="flex flex-col items-center gap-4 mb-4">
                         <div class="w-12 h-12 bg-gold/20 rounded-xl flex items-center justify-center">
-                            <i data-lucide="moon" class="w-6 h-6 text-gold"></i>
+                            <i data-lucide="trophy" class="w-6 h-6 text-gold"></i>
                         </div>
                         <div>
                             <span class="text-gold text-xs font-bold">Événement — 2025</span>
@@ -556,11 +561,12 @@
                         </div>
                     </div>
                     <p class="text-light text-sm mb-1">Hackathon national</p>
-                    <p class="text-light text-sm mb-4">Développement intensif d'une application web en équipe.
-                        Challenge technique et créatif sur une nuit.</p>
+                    <p class="text-light text-sm mb-4">Participation à des challenges CTF (Capture The Flag) et
+                        résolution de défis de sécurité en équipe sur une nuit.</p>
                     <div class="flex flex-wrap gap-2 justify-center">
+                        <span class="badge text-xs px-2 py-1 rounded">CTF</span>
+                        <span class="badge text-xs px-2 py-1 rounded">Cybersécurité</span>
                         <span class="badge text-xs px-2 py-1 rounded">Travail d'équipe</span>
-                        <span class="badge text-xs px-2 py-1 rounded">Développement</span>
                     </div>
                 </div>
             </div>
@@ -637,7 +643,7 @@
                     class="fade-in skill-card rounded-xl p-6 hover:shadow-lg hover:shadow-gold/10 transition-all text-center">
                     <div class="flex flex-col items-center gap-4 mb-5">
                         <div class="w-12 h-12 bg-gold/20 rounded-xl flex items-center justify-center">
-                            <i data-lucide="box" class="w-6 h-6 text-gold"></i>
+                            <i data-lucide="layers" class="w-6 h-6 text-gold"></i>
                         </div>
                         <h3 class="text-lg font-bold text-light">Virtualisation</h3>
                     </div>
@@ -670,7 +676,7 @@
                     <div
                         class="h-44 bg-gradient-to-br from-cyan-500/20 to-blue-500/20 flex items-center justify-center">
                         <div class="w-16 h-16 bg-cyan-500/30 rounded-2xl flex items-center justify-center">
-                            <i data-lucide="network" class="w-8 h-8 text-cyan-400"></i>
+                            <i data-lucide="share-2" class="w-8 h-8 text-cyan-400"></i>
                         </div>
                     </div>
                     <div class="p-6 text-center">
@@ -695,7 +701,7 @@
                     <div
                         class="h-44 bg-gradient-to-br from-teal-500/20 to-emerald-500/20 flex items-center justify-center">
                         <div class="w-16 h-16 bg-teal-500/30 rounded-2xl flex items-center justify-center">
-                            <i data-lucide="globe" class="w-8 h-8 text-teal-400"></i>
+                            <i data-lucide="layout-dashboard" class="w-8 h-8 text-teal-400"></i>
                         </div>
                     </div>
                     <div class="p-6 text-center">
@@ -718,7 +724,7 @@
                     class="fade-in project-card bg-dark-100 rounded-xl overflow-hidden hover:shadow-xl hover:shadow-gold/10 transition-all">
                     <div class="h-44 bg-gradient-to-br from-gold/20 to-amber-500/20 flex items-center justify-center">
                         <div class="w-16 h-16 bg-gold/30 rounded-2xl flex items-center justify-center">
-                            <i data-lucide="code" class="w-8 h-8 text-gold"></i>
+                            <i data-lucide="gamepad-2" class="w-8 h-8 text-gold"></i>
                         </div>
                     </div>
                     <div class="p-6 text-center">
@@ -752,7 +758,8 @@
             <div class="grid lg:grid-cols-2 gap-12 max-w-5xl mx-auto">
                 <!-- Form -->
                 <div class="fade-in">
-                    <form id="contactForm" class="space-y-5">
+                    <form id="contactForm" action="https://formspree.io/f/YOUR_FORM_ID_HERE" method="POST"
+                        class="space-y-5">
                         <div>
                             <label for="name" class="block text-sm font-medium text-light mb-2">Nom complet</label>
                             <input type="text" id="name" name="name" required
@@ -888,20 +895,12 @@
 
         fadeElements.forEach(el => observer.observe(el));
 
-        // Form submission (demo)
-        const contactForm = document.getElementById('contactForm');
-
-        contactForm.addEventListener('submit', (e) => {
-            e.preventDefault();
-
-            // Get form data
-            const formData = new FormData(contactForm);
-            const data = Object.fromEntries(formData);
-
-            // Show success message (in real app, send to server)
-            alert('Merci pour votre message ! Je vous répondrai dans les plus brefs délais.');
-            contactForm.reset();
-        });
+        // Form submission (handled by Formspree)
+        // const contactForm = document.getElementById('contactForm');
+        // contactForm.addEventListener('submit', (e) => {
+        //     e.preventDefault();
+        //     // ... code removed ...
+        // });
 
         // Smooth scroll for navigation
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
